--- a/intro.qmd
+++ b/intro.qmd
@@ -81,7 +81,10 @@ order). Add yours; note the syntax of nested list in Markdown.
     - Become proficient in building a machine learning model
 + Mastrorilli, Ginamarie 
     - Become more comfortable with git. 
-    - Increase my ability to learn new programs. 
+    - Increase my ability to learn new programs.
++ Nguyen, Christine
+    - Become proficient in Git and apply it. 
+    - Build my Python programming skills. 
 + Sullivan, Collin
     - I would like to learn to be able to use data science well enough to get a job in the field
     - Discover if this area of statistics is one that I am passionate about
